# openmango

./: .gitattributes  .gitignore  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  THIRD_PARTY_NOTICES  build.rs  package.json  tsconfig.json
.cargo/: config.toml
.cargo-husky/hooks/: pre-commit
.claude/: settings.local.json
.codex/environments/: environment.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  nightly.yml  release.yml
.husky/: pre-commit
assets/forge/: editor.css  editor.html  editor.js  editor.ts  mongosh-sidecar.ts
assets/logo/: openmango.icns
docs/: AI_CHAT_SPEC.md  aggr-editor-full-review.md  aggr.md  aggregation-pipeline-ux.md  completions.md  features.md  import-export-implementation-plan.md  import-export.md  json-editor-lsp-implementation.md  next-feature-analysis.md
homebrew/: openmango.rb
scripts/: build_forge_editor.sh  build_mongosh_sidecar.sh  check_mongosh_sidecar.sh  download_node.sh  download_tools.sh  release_linux.sh  release_macos.sh
src/: app.rs  app.tsx  assets.rs  changelog.rs  error.rs  index.tsx  keyboard.rs  lib.rs  main.rs  perf.rs  theme.rs
src/ai/: blocks.rs  bridge.rs  budget.rs  context.rs  errors.rs  mod.rs  model_registry.rs  provider.rs  safety.rs  settings.rs  telemetry.rs
src/ai/tools/: aggregate.rs  collection_stats.rs  count.rs  create_index.rs  delete.rs  drop_index.rs  explain.rs  find.rs  generate_report.rs  indexes.rs  insert.rs  list_collections.rs  mod.rs  schema.rs  update.rs
src/app/: actions.rs  dialogs.rs  menus.rs  root.rs  search.rs  sidebar.rs  sidebar_model.rs
src/app/sidebar/: keys.rs  mod.rs  view.rs
src/bson/: formatter.rs  key.rs  mod.rs  parser.rs  path.rs
src/components/: button.rs  confirm.rs  connection_dialog.rs  connection_manager.rs  content.rs  dialog_helpers.rs  file_picker.rs  form_field.rs  mod.rs  status_bar.rs
src/components/action_bar/: mod.rs  providers.rs  types.rs
src/components/ai_blocks/: chart.rs  datatable.rs  mod.rs  query_preview.rs  report.rs  stats.rs
src/components/collection/: collection-details.tsx  copy-collection-modal.tsx  create-collection-modal.tsx
src/components/connection/: add-connection-modal.tsx  connection-details.tsx  edit-connection-modal.tsx
src/components/connection_manager/: actions.rs  connection_list.rs  export_dialog.rs  import.rs  mod.rs  state.rs  tabs.rs  uri.rs  view.rs
src/components/content/: empty.rs  mod.rs  shell.rs  tabs.rs
src/components/database/: copy-database-modal.tsx  create-database-modal.tsx  database-details.tsx
src/components/document/: document-browser.tsx  document-expanded.tsx  document-item.tsx  document-list.tsx  filter-input.tsx  index.ts  json-tree.tsx
src/components/filter_builder/: drag.rs  mod.rs  panel.rs  types.rs
src/components/layout/: detail-panel.tsx  keyboard-hints.tsx  main-layout.tsx  panel.tsx  sidebar.tsx  status-bar.tsx
src/components/navigation/: server-browser.tsx  tree-leaf.tsx  tree-node.tsx
src/components/shared/: button.tsx  checkbox.tsx  confirm-dialog.tsx  error-message.tsx  form-field.tsx  modal-renderer.tsx  modal.tsx  progress-indicator.tsx  search-input.tsx  section.tsx
src/components/status_bar/: left.rs  mod.rs  right.rs
src/components/tree/: mod.rs
src/connection/: csv_utils.rs  manager.rs  mod.rs  mongo.rs  tools.rs  tunnel.rs  types.rs
src/connection/ops/: aggregation.rs  bson_tools.rs  copy.rs  documents.rs  explain.rs  export.rs  import.rs  indexes.rs  mod.rs  schema.rs  stats.rs
src/context/: app-context.tsx  document-context.tsx  focus-context.tsx  modal-context.tsx
src/helpers/: auto_pair.rs  connection_io.rs  crypto.rs  format.rs  keystore.rs  mod.rs  validate.rs
src/hooks/: index.ts  use-connection.ts
src/models/: connection.rs  mod.rs  tree_node_id.rs
src/services/: collection.ts  database.ts  document.ts  field-index.ts  index.ts  mongodb.ts  persistence.ts
src/state/: commands.rs  config.rs  editor_sessions.rs  events.rs  mod.rs  settings.rs  status.rs  transfer_rules.rs  workspace.rs
src/state/app_state/: aggregation.rs  connection.rs  database_sessions.rs  forge.rs  json_editor.rs  mod.rs  selection.rs  tabs.rs  (+6 more)
src/theme/: index.ts
src/types/: connection-string.ts  document.ts  index.ts
src/utils/: connection-string-parser.ts  json-formatter.ts  json-highlighter.ts  truncate.ts
src/views/: ai.rs  collections.rs  connections.rs  databases.rs  json_editor.rs  json_editor_detached.rs  mod.rs  settings.rs  transfer.rs
tests/: aggregation_tests.rs  bson_parsing_tests.rs  bson_shell_syntax_tests.rs  bulk_operations_tests.rs  connection_tests.rs  csv_utils_tests.rs  document_tests.rs  edge_cases_tests.rs  index_tests.rs  settings_tests.rs  stats_tests.rs  transfer_tests.rs  transport_connection_tests.rs  validation_tests.rs
tests/common/: fixtures.rs  mod.rs  transport.rs
themes/: catppuccin-latte.json  catppuccin-mocha.json  darcula-dark.json  gruvbox-dark.json  gruvbox-light.json  nord.json  one-dark.json  openmango-dark.json  rose-pine-dawn.json  rose-pine.json  solarized-dark.json  solarized-light.json  tokyo-night.json
tools/forge-sidecar/: package-lock.json  package.json
(+143 files in other folders)
