[package]
name = "openmango"
version = "0.1.5"
edition = "2024"
description = "A GPU-accelerated MongoDB client built with GPUI"
license = "MIT"

[features]
default = []
mimalloc = ["dep:mimalloc"]

[dependencies]
gpui = "0.2.2"
gpui-component = { version = "0.5", features = ["tree-sitter-languages"] }
tree-sitter = "0.25"
tree-sitter-javascript = "0.25"
gpui-component-assets = "0.5"
lsp-types = "0.97"
mongodb = "3.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bson = "3.1.0"
json5 = "1.3"
dirs = "6.0"
uuid = { version = "1.20", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
postcard = { version = "1.1", features = ["alloc"] }
log = "0.4"
env_logger = "0.11"
mimalloc = { version = "0.1", optional = true }
rust-embed = "8.11"
raw-window-handle = "0.6"
ropey = "2.0.0-beta.1"

futures = "0.3"
dashmap = "6.1"
parking_lot = "0.12"
rfd = "0.17"
csv = "1.4"
which = "8.0"
flate2 = "1.1"
encoding_rs = "0.8"
unicode-segmentation = "1.12.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
semver = "1.0"

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = [
    "user-hooks",
] }
testcontainers = "0.26"
testcontainers-modules = { version = "0.14", features = ["mongo"] }
tempfile = "3.24"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true

[patch.crates-io]
gpui-component = { path = "vendor/gpui-component" }
